# advent_of_code

./: .gitignore  README.md  __main__.py  advent_of_code.bat
2017/: .gitignore  AdventOfCode2017.sln  aoc.bat
2017/01 Inverse Captcha/: 01 Inverse Captcha.vcxproj  01 Inverse Captcha.vcxproj.filters  01A.cpp  01B.cpp
2017/02 Corruption Checksum/: 02 Corruption Checksum.vcxproj  02 Corruption Checksum.vcxproj.filters  02A.cpp  02B.cpp
2017/03 Spiral Memory/: 03 Spiral Memory.vcxproj  03 Spiral Memory.vcxproj.filters  03A.cpp  03B.cpp
2017/04 High-Entropy Passphrases/: 04 High-Entropy Passphrases.vcxproj  04 High-Entropy Passphrases.vcxproj.filters  04A.cpp  04B.cpp
2017/05 A Maze of Twisty Trampolines/: 05 A Maze of Twisty Trampolines.vcxproj  05 A Maze of Twisty Trampolines.vcxproj.filters  05A.cpp  05B.cpp
2017/06 Memory Reallocation/: 06 Memory Reallocation.vcxproj  06 Memory Reallocation.vcxproj.filters  06A.cpp  06B.cpp
2017/07 Recursive Circus/: 07 Recursive Circus.vcxproj  07A.cpp  07B.cpp  (+1 more)
2018/: .gitignore  Cargo.toml  README.md  aoc.bat  make.py
2019/: Cargo.toml
2023/: .gitignore  __main__.py  aoc.bat  install.bat  make.py
2024/: __main__.py  aoc.bat
2025/: Cargo.toml  make.py
aoc_exe/: Cargo.toml
aoc_exe/src/: main.rs
day03/: Cargo.toml
day09/: Cargo.toml  javascript_implementation.js  output.txt
day17/: output.txt
day20/: output.txt
day22/: Cargo.toml
solutions/: day02.py  day03.py  day05.py  day07.py  day09.py  day10.py  day11.py  day12.py  day14.py  day15.py  day16.py  day17.py  day19.py  day20.py  day24.py
(+235 files in other folders)
